--- a/index.html
+++ b/index.html
@@ -1218,7 +1218,7 @@
                                     <i class="fas fa-envelope fa-2x text-primary me-4"></i>
                                     <div>
                                         <h4>Mail Us</h4>
-                                        <p class="mb-0">OdeonUnisexSalon&Spa@example.com</p>
+                                        <p class="mb-0">OdeonUnisexSalon&Spa<br>@example.com</p>
                                     </div>
                                 </div>
                             </div>
